cmake_minimum_required(VERSION 3.24)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(01 "01.cpp")
add_executable(02 "02.cpp")
add_executable(03 "03.cpp")
add_executable(04 "04.cpp")
add_executable(05 "05.cpp")
add_executable(06 "06.cpp")
add_executable(07 "07.cpp")
add_executable(LeetCode654 "LeetCode654.cpp")
add_executable(PTA_1001 "PTA_1001.cpp")
add_executable(PTA_1002 "PTA_1002.cpp")
add_executable(PTA_1003 "PTA_1003.cpp")
add_executable(PTA_1004 "PTA_1004.cpp")
add_executable(PTA_1005 "PTA_1005.cpp")
add_executable(PTA_1006 "PTA_1006.cpp")
add_executable(PTA_1007 "PTA_1007.cpp")
add_executable(PTA_1008 "PTA_1008.cpp")
add_executable(PTA_1009 "PTA_1009.cpp")
add_executable(PTA_1010 "PTA_1010.cpp")
add_executable(PTA_1011 "PTA_1011.cpp")
add_executable(PTA_1012 "PTA_1012.cpp")
add_executable(PTA_1013 "PTA_1013.cpp")
add_executable(PTA_1014 "PTA_1014.cpp")
add_executable(PTA_1015 "PTA_1015.cpp")
add_executable(PTA_1016 "PTA_1016.cpp")
add_executable(PTA_1017 "PTA_1017.cpp")
add_executable(PTA_1018 "PTA_1018.cpp")
add_executable(PTA_1019 "PTA_1019.cpp")
add_executable(PTA_1020 "PTA_1020.cpp")
add_executable(PTA_1021 "PTA_1021.cpp")
add_executable(PTA_1022 "PTA_1022.cpp")
add_executable(PTA_1023 "PTA_1023.cpp")
add_executable(PTA_1024 "PTA_1024.cpp")
add_executable(PTA_1025 "PTA_1025.cpp")
add_executable(PTA_1026 "PTA_1026.cpp")
add_executable(PTA_1027 "PTA_1027.cpp")
add_executable(PTA_1030 "PTA_1030.cpp")
add_executable(PTA_1045 "PTA_1045.cpp")
add_executable(PTA_1110 "PTA_1110.cpp")
add_executable(QuickSort "QuickSort.cpp")